# cmake-template

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
test/: CMakeLists.txt  gtest.cmake
test/tests/: tests.cpp
